add navbar trad

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,10 +1,10 @@
 {
-    "NAVBAR": {
-        "MétaHisme": "MétaHisme",
-        "Oeuvres": "works",
-        "Biographie": "Biography",
-        "Actualités": "News"
-    },
+    "navbar": {
+        "metaHisme": "MetaHism",
+        "oeuvres": "Artworks",
+        "biographie": "Biography",
+        "actualites": "News"
+   },
 
     "Oeuvres": {
         "Archétypes": "Archetypes",
