--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,9 +1,9 @@
 {
-    "NAVBAR": {
-        "MétaHisme": "MétaHisme",
-        "Oeuvres": "Œuvres",
-        "Biographie": "Biographie",
-        "Actualités": "Actualités"
+    "navbar": {
+        "metaHisme": "MétaHisme",
+        "oeuvres": "Œuvres",
+        "biographie": "Biographie",
+        "actualites": "Actualités"
     },
     "Oeuvres": {
         "Archétypes": "Archétypes",
