🐛 fix traduction navbar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,9 +1,9 @@
 {
     "navbar": {
-        "metaHisme": "MetaHism",
-        "oeuvres": "Artworks",
-        "biographie": "Biography",
-        "actualites": "News"
+        "MétaHisme": "MetaHism",
+        "Oeuvres": "Artworks",
+        "Biographie": "Biography",
+        "Actualités": "News"
    },
 
     "Oeuvres": {
