--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -41,7 +41,7 @@
         "Texte12.7":"Le MétaHisme s’inscrit dans un changement d’époque dont il est la retranscription.",
         "Texte13":" 'Méta, car exprimant le tout, isme comme concept et suffixe universel, que l’on retrouve dans tous les mouvements et H, huitième lettre de l’alphabet, (lettre de l’infini, ∞, lemniscate) et séparateur. Lettre à haute portée symbolique. Cérébral et sensible, virtuel et réel, peinture, sculpture, concept, installation, le travail de LAUMOND est tout cela et bien au-delà. Issue d'une démarche d'une rigueur absolue, son œuvre demeure la manifestation la plus radicale d'un esprit en liberté.'",
         "Texte14":"Edith Herlemont-Lassiat, Critique d’art - Exporevue.com",
-        "Text15":" * Le Manifeste du MétaHisme existe déjà, ce travail de théorisation est concrétisé comme une œuvre en soi consultable sur demande.",
+        "Texte15":" * Le Manifeste du MétaHisme existe déjà, ce travail de théorisation est concrétisé comme une œuvre en soi consultable sur demande.",
         "Texte16":"Patrick Laumond"
     }
 }
