🐛 fix footer position

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,8 @@
         "MétaHisme": "MetaHism",
         "Oeuvres": "Artworks",
         "Biographie": "Biography",
-        "Actualités": "News"
+        "Actualités": "News",
+        "Analyses": "Analyzes"
    },
 
     "Oeuvres": {
