--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,7 +3,9 @@
         "MétaHisme": "MétaHisme",
         "Oeuvres": "Œuvres",
         "Biographie": "Biographie",
-        "Actualités": "Actualités"
+        "Actualités": "Actualités",
+        "Analyses": "Analyses"
+
     },
     "Oeuvres": {
         "Archétypes": "Archétypes",
