✅ add icon  and name  url

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,7 +41,7 @@
         "Texte12.5":"MetaHism invites us to reconnect with each other and by extension to the great whole.",
         "Texte12.6":"MetaHism invites us to connect antagonisms ; consciousness and unconsciousness, materiality and immateriality, the visible and the invisible, the temporel and the timeless, interiority and exteriority, the limit and the infinite or the continuous and discontinuous.",
         "Texte12.7":"MetaHism is part of a change of era of which it is the transcription.",
-        "Texte13":"'Méta, because expressing the whole, ism as a concept and universal suffix, which is found in all movements and H, eighth letter of the alphabet, (infinity letter, 00, lemniscate) and separator. Letter to high symbolic significance. Cerebral and sensitive, virtual and real, painting, sculpture, concept, installation, LAUMOND's work is all of this and more. resulting from an approach of absolute rigor, its. This work remains the most radical manifestation of a free spirit'",
+        "Texte13":"'Méta, because expressing the whole, ism as a concept and universal suffix, which is found in all movements and H, eighth letter of the alphabet, (infinity letter, ∞, lemniscate) and separator. Letter to high symbolic significance. Cerebral and sensitive, virtual and real, painting, sculpture, concept, installation, LAUMOND's work is all of this and more. resulting from an approach of absolute rigor, its. This work remains the most radical manifestation of a free spirit'",
         "Texte14":"E.H.L Curator Exporevue",
         "Texte15":"* The Manifest of MétaHism already exists, this work of theorization is concretized as an artwork and can be consulted on request",
         "Texte16":"Patrcik Laumond"
